# u2hts_core

./: CMakeLists.txt  README.md  u2hts_api.h  u2hts_core.c  u2hts_core.h  u2hts_hid_report_descriptor.h  u2hts_report_descriptor.h
